shipping metode fix text align

--- a/public/scss/pages/ShippingMethod.module.scss
+++ b/public/scss/pages/ShippingMethod.module.scss
@@ -99,7 +99,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
     flex-wrap: wrap;
     position: relative;
     border: 1px solid $color_gray_primary;
